<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/notice_layout"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:background="@color/_ffffff">

        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:text="发票须知"
            android:textColor="#333333"
            android:textSize="28px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notice_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill1_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent1_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill2_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent2_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill3_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent4_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent3_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill4_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent5_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent4_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill5_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent6_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent5_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill6_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent7_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent6_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill7_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent8_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent7_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/bill8_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>
</RelativeLayout>