<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/backLayout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp">


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/backbtn" />
        </RelativeLayout>


        <TextView
            android:id="@+id/class_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="关于我们"
            android:textColor="@color/my_tvcolor"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#666666" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/about_ac_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_version"
        android:textColor="#666666"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/about_content"
        android:textColor="#999999"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/about_content_two"
        android:textColor="#999999"
        android:textSize="13sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/about_tv"
        android:textColor="#c8c8c8"
        android:textSize="13sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/about_tv_tv"
        android:textColor="#c8c8c8"
        android:textSize="13sp" />
</LinearLayout>