<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/notice_layout"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:background="@color/_ffffff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentTop="true"
            android:background="#dddddd" />

        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:text="付款遇到的问题"
            android:textColor="#333333"
            android:textSize="28px" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#dddddd" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notice_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="20px"
            android:text="@string/pay_notice1_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent1_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="10px"
            android:text="@string/pay_notice2_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noticeContent3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noticeContent2_layout"
        android:background="@color/_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/pay_notice3_txt"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>
</RelativeLayout>