<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/input_bg_color">

    <include
        android:id="@+id/title_studyHome_layout"
        layout="@layout/base_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/have_cache_layout"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_below="@+id/title_studyHome_layout"
        android:background="@color/banner_color"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:text="@string/have_cache_txt"
            android:textColor="@color/userTip_txt_color"
            android:textSize="28px" />

        <ImageView
            android:layout_width="25px"
            android:layout_height="45px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30px"
            android:background="@drawable/ic_right_back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/haveLogin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/have_cache_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90px"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <RelativeLayout
            android:id="@+id/null_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/null_header_layout"
                android:layout_width="match_parent"
                android:layout_height="360px"
                android:background="@drawable/personinfo_bg">

                <RelativeLayout
                    android:id="@+id/nullHeader_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/null_nike_Img"
                        android:layout_width="160px"
                        android:layout_height="160px"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="50px"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_avatar" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/timeProgress_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nullHeader_layout"
                    android:layout_marginTop="46px">

                    <LinearLayout
                        android:id="@+id/day_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="90px"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_finish_txt"
                            android:textColor="@color/input_bg_color"
                            android:textSize="24px" />

                        <TextView
                            android:id="@+id/null_finishStudy_Txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10px"
                            android:textColor="@color/input_bg_color"
                            android:textSize="36px"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/lineStudy_Img"
                        android:layout_width="2px"
                        android:layout_height="40px"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="42px"
                        android:layout_toRightOf="@+id/day_layout"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/lineStudy_Img"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/null_tips_Txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="42px"
                            android:text=""
                            android:textColor="@color/input_bg_color"
                            android:textSize="24px" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_layout"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/empty_img"
                    android:layout_width="170px"
                    android:layout_height="200px"
                    android:layout_centerInParent="true"
                    android:background="@drawable/icon_empty" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/empty_img"
                    android:layout_marginTop="50px">

                    <TextView
                        android:id="@+id/empty_Txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/txt_shopping_tips"
                        android:textColor="#8b98ad"
                        android:textSize="30px" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notLogin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/have_cache_layout"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/userImg_layout"
            android:layout_width="match_parent"
            android:layout_height="360px"
            android:layout_below="@+id/title_layout"
            android:background="@drawable/personinfo_bg">

            <RelativeLayout
                android:id="@+id/img_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nike_Img"
                    android:layout_width="160px"
                    android:layout_height="160px"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="50px"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_avatar" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_layout">

                <TextView
                    android:id="@+id/tip_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="50px"
                    android:text="@string/tip_login_txt"
                    android:textColor="@color/input_bg_color"
                    android:textSize="28px" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_Btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userImg_layout"
            android:layout_marginTop="80px">

            <Button
                android:id="@+id/login_Btn"
                android:layout_width="542px"
                android:layout_height="82px"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/login_button_bg"
                android:text="@string/login_txt"
                android:textColor="@color/input_bg_color"
                android:textSize="32px" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/register_Btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_Btn_layout"
            android:layout_marginTop="48px">

            <Button
                android:id="@+id/register_Btn"
                android:layout_width="542px"
                android:layout_height="82px"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_register_bg"
                android:text="@string/register_txt"
                android:textColor="@color/register_txt_color"
                android:textSize="32px" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>